--- a/JorgeNeto.html
+++ b/JorgeNeto.html
@@ -1,7 +1,7 @@
 <html>
     <body>
         
-        # "A vida é triste...."
+        <h2>Recebemos paz apenas quando não sentimos nada....</h2>
         
     </body>
 </html>
