--- a/JorgeNeto.html
+++ b/JorgeNeto.html
@@ -1,7 +1,5 @@
 <html>
     <body>
-        <h3>
-            " A vida é triste....,"
-        </h3>
+        <h3>Teremos paz apenas depois da morte, onde sentimos mais nada...</h3>
     </body>
 </html>
