--- a/html/index.html
+++ b/html/index.html
@@ -7,6 +7,12 @@
     <title>Document</title>
 </head>
 <body>
+    <hr>
+    <ul>
+        <li><a href="JorgeNeto.html"> Jorge Neto</a></li>
+    </ul>
+   <hr>
+    
     
 </body>
 </html>
