--- a/html/index.html
+++ b/html/index.html
@@ -9,7 +9,7 @@
 <body>
     <hr>
     <ul>
-        <li><a href="JorgeNeto.html"> Jorge Maluf</a></li>
+        <li><a href="JorgeNeto.html"> Jorge Neto</a></li>
     </ul>
     <hr>
 </body>
